--- a/notebooks/practice/practicum_1/Logistic_regression_and_GD_.ipynb
+++ b/notebooks/practice/practicum_1/Logistic_regression_and_GD_.ipynb
@@ -56994,7 +56994,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57033,7 +57033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -68651,7 +68651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68719,7 +68719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "id": "klbAqeIYAl3X"
       },
@@ -68757,7 +68757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -68859,7 +68859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -68920,7 +68920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 17,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -69333,7 +69333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -80985,7 +80985,8 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "ai",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
