Removed annoying part in notebook

--- a/notebooks/personal/deep_neural_networks.ipynb
+++ b/notebooks/personal/deep_neural_networks.ipynb
@@ -8,6 +8,34 @@
     "\n",
     "This notebook shows how to build and train a neural network with plain numpy before and with pytorch lightning after."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pytorch Lightning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
